# 2022-lambda-calculus-typechecker

./: CMakeLists.txt  README.md  main.cpp
.github/workflows/: cmake.yml
src/: CMakeLists.txt  declaration.cpp  declaration.h  lct.cpp  lct.h  lct_parser.cpp  lct_parser.h  lexer.l  parser.y  parser_helper.h
tests/: CMakeLists.txt  tests.cpp
